crates/app/tests/snapshots/subagent_prompt_golden__subagent_full_codex_true_parallel_true_yield_true_plan_true_eager_default.snap
---
source: crates/app/tests/subagent_prompt_golden.rs
expression: prompt
---
Golden specialist

# Specialist

Complete only the delegated target.

# Shared Context
Shared batch contract.

Preserve ownership.

# Runtime
Workspace root: `/workspace/.worktrees/golden`
Active plan: `/workspace/CPLAN.md`

## Active Plan
# Plan

1. Inspect.
2. Implement.

Plan mode is read-only: inspect and return an executable plan. Do not mutate, spawn, or isolate work.

Return the terminal result through `yield` with complete data matching this effective JSON Schema:
{"properties":{"answer":{"type":"string"},"count":{"type":"integer"}},"required":["answer"],"type":"object"}

# IRC
You are Golden (task) on roster generation 42.
Ordinary sends are fire-and-forget. Await a reply only when blocked; reply with the received message id. Delivery receipts describe routing, not task completion.
- Golden (task, running, self): editing
- Scout (scout, idle): idle
- Reviewer (reviewer, parked): reviewing

For independent lookups, issue tool calls together; keep dependent mutations ordered and verify the resulting state.

Incremental yield paths accumulate until a terminal yield; never repeat assembled sections in the terminal payload.
