crates/app/tests/snapshots/subagent_prompt_golden__subagent_minimal.snap
---
source: crates/app/tests/subagent_prompt_golden.rs
expression: prompt
---
Golden specialist

# Specialist

Complete only the delegated target.

# Runtime
Workspace root: `/workspace`
